# exiftool-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  TASK.md  TODO.md  TODO3.md  bootstrap.ps1  bootstrap.py  report.md  task.md
crates/exiftool-attrs/: Cargo.toml
crates/exiftool-attrs/src/: error.rs  lib.rs  schema.rs  value.rs
crates/exiftool-cli/: Cargo.toml
crates/exiftool-cli/src/: geotag.rs  html_output.rs  main.rs  xml_output.rs
crates/exiftool-core/: Cargo.toml
crates/exiftool-core/src/: byte_order.rs  charset.rs  error.rs  format.rs  ifd.rs  lib.rs  value.rs  writer.rs
crates/exiftool-core/tests/: proptest_parsers.proptest-regressions  proptest_parsers.rs
crates/exiftool-formats/: Cargo.toml
crates/exiftool-formats/benches/: parser_bench.rs
crates/exiftool-formats/src/: aac.rs  ai.rs  aiff.rs  alac.rs  ape.rs  arw.rs  asf.rs  au.rs  audible.rs  avi.rs  bmp.rs  braw.rs  composite.rs  cr2.rs  cr3.rs  crw.rs  dcr.rs  dpx.rs  dsf.rs  eps.rs  erf.rs  error.rs  exr.rs  exr_writer.rs  fff.rs  flac.rs  flv.rs  gif.rs  hdr.rs  hdr_writer.rs  heic.rs  heic_writer.rs  ico.rs  id3.rs  id3_writer.rs  iiq.rs  iptc.rs  jp2.rs  jpeg.rs  jpeg_writer.rs  (+46 more)
crates/exiftool-formats/src/makernotes/: apple.rs  canon.rs  casio.rs  dji.rs  fujifilm.rs  google.rs  gopro.rs  hasselblad.rs  huawei.rs  kodak.rs  leica.rs  minolta.rs  mod.rs  motorola.rs  nikon.rs  olympus.rs  oneplus.rs  oppo.rs  panasonic.rs  pentax.rs  phaseone.rs  realme.rs  ricoh.rs  samsung.rs  sigma.rs  sony.rs  vivo.rs  xiaomi.rs
crates/exiftool-formats/tests/: golden_tests.rs  proptest_formats.rs  raw_formats.rs  round_trip.rs
crates/exiftool-formats/tests/golden/: mod.rs
crates/exiftool-icc/: Cargo.toml
crates/exiftool-icc/src/: error.rs  header.rs  lib.rs  tags.rs
crates/exiftool-iptc/: Cargo.toml
crates/exiftool-iptc/src/: error.rs  lib.rs  tags.rs
crates/exiftool-py/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/exiftool-py/python/exiftool_py/: __init__.py  __init__.pyi
crates/exiftool-py/src/: error.rs  gps.rs  gpx.rs  image.rs  lib.rs  rational.rs  scan.rs  value.rs
crates/exiftool-tags/: Cargo.toml
crates/exiftool-tags/src/: exif.rs  interp.rs  lib.rs
crates/exiftool-xmp/: Cargo.toml
crates/exiftool-xmp/src/: error.rs  lib.rs  parser.rs  sidecar.rs  writer.rs
docs/: AGENTS.md  EXIFTOOL-REF.md  TODO.md  TODO8.md  book.toml  plan1.md  plan2.md  task.md
docs/src/: SUMMARY.md  architecture.md  building.md  cli.md  contributing.md  formats.md  fuzz-testing.md  getting-started.md  intro.md  performance.md  python.md  reading.md  writing.md
docs/src/architecture/: crates.md  parsers.md
docs/src/formats/: audio.md  images.md  raw.md  video.md
docs/src/getting-started/: installation.md  quickstart.md
docs/src/python/: api.md  installation.md  usage.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_cr3.rs  fuzz_heic.rs  fuzz_jpeg.rs  fuzz_png.rs  fuzz_registry.rs  fuzz_tiff.rs  fuzz_webp.rs
tests/: img_1914.heic  info.cmd  info_all.py  test.flac
xtask/: Cargo.toml  dump_tags.pl  tags.json
xtask/src/: main.rs
