[workspace]
resolver = "2"
members = [
    "crates/exiftool-core",
    "crates/exiftool-attrs",
    "crates/exiftool-tags",
    "crates/exiftool-formats",
    "crates/exiftool-xmp",
    "crates/exiftool-iptc",
    "crates/exiftool-icc",
    "crates/exiftool-cli",
    "crates/exiftool-py",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/exiftool-rs"

[workspace.dependencies]
# Internal crates
exiftool-core = { path = "crates/exiftool-core" }
exiftool-attrs = { path = "crates/exiftool-attrs" }
exiftool-tags = { path = "crates/exiftool-tags" }
exiftool-formats = { path = "crates/exiftool-formats" }
exiftool-xmp = { path = "crates/exiftool-xmp" }
exiftool-iptc = { path = "crates/exiftool-iptc" }
exiftool-icc = { path = "crates/exiftool-icc" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# XML for XMP
quick-xml = "0.38"

# Compile-time maps
phf = { version = "0.13", features = ["macros"] }

# Logging
tracing = "0.1"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }

# UUID
uuid = { version = "1.19", features = ["v4", "serde"] }

# EXR support
exr = "1.74"

# Compression
flate2 = "1.1"
