[package]
name = "exiftool-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for exiftool-rs - fast image metadata library"
license = "MIT OR Apache-2.0"

[lib]
name = "exiftool_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
exiftool-formats = { path = "../exiftool-formats" }
exiftool-attrs = { path = "../exiftool-attrs" }
exiftool-core = { path = "../exiftool-core" }
exiftool-xmp = { path = "../exiftool-xmp" }
glob = "0.3"
rayon = "1.11"

[build-dependencies]
pyo3-build-config = "0.27"
