[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "exiftool-py"
version = "0.1.0"
description = "Fast image metadata library - Rust-powered Python bindings"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["exif", "metadata", "image", "jpeg", "raw", "photography"]

[project.urls]
Homepage = "https://github.com/user/exiftool-rs"
Repository = "https://github.com/user/exiftool-rs"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "exiftool_py._core"
